<resources>
    <string name="app_name">File Viewer</string>
    <string name="banner_ad_unit_id">ca-app-pub-7582881376117621/8502778392</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_guide">Guide</string>
    <string name="title_image">Image</string>
    <string name="title_video">Video</string>
    <string name="title_audio">Audio</string>
    <string name="title_file">Storge</string>
    <string name="cate_title">Etc</string>
    <string name="title_share">Share</string>
    <string name="title_share_intent">Share File Viewer</string>
    <string name="product_version">Product Version</string>
    <string name="title_activity_guide">Guide</string>
    <string name="title_activity_settings">Settings</string>
    <string name="preference_setting_cate_title">File Viewer</string>
    <string name="preference_setting_title">Hidden file</string>
    <string name="preference_setting_desc">Hidden file and older</string>

</resources>
