<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
            <item
                android:id="@+id/nav_image"
                android:icon="@drawable/menu_icon04"
                android:title="@string/title_image" />
            <item
                android:id="@+id/nav_video"
                android:icon="@drawable/menu_icon05"
                android:title="@string/title_video" />
            <item
                android:id="@+id/nav_music"
                android:icon="@drawable/menu_icon06"
                android:title="@string/title_audio" />
            <item
                android:id="@+id/nav_file"
                android:icon="@drawable/menu_icon07"
                android:title="@string/title_file" />
    </group>

    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_guide"
            android:icon="@drawable/menu_icon09"
            android:title="@string/title_guide" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/menu_icon08"
            android:title="@string/title_settings" />
    </group>


    <item android:title="@string/cate_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
